<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AccountActivity">

    <ImageButton
        android:id="@+id/account_back_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/back_arrow"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="32dp"/>

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/account_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/account_text"
        app:layout_constraintBottom_toTopOf="@id/account_name_filled"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/account_name_filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/account_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_email"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/account_name_filled"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/account_email_filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/account_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account_logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_simple"/>
</androidx.constraintlayout.widget.ConstraintLayout>